Fixed white space issues while printing record page

--- a/record/record.css
+++ b/record/record.css
@@ -97,6 +97,11 @@
 @media print {
     #main-content {
         height: auto !important;
+        display: block;
+    }
+
+    #record-side-pan{
+        display: none;
     }
 
     .container-fluid {
@@ -120,11 +125,11 @@
     }
 
     .record-container .entity-key {
-        width: auto;
+        width: 15%;
         max-width: 120px;
     }
 
     .record-container .entity-value {
-        width: auto;
+        width: 85%;
     }
 }
